# ECE5620

./: Youtube_EtherCAT
SOEM/: CMakeLists.txt  readme_build.txt
SOEM/applications/EtherCAT/: CMakeLists.txt  EtherCAT_app.c
